feat: light is too light

--- a/src/theme/alert.scss
+++ b/src/theme/alert.scss
@@ -1,7 +1,7 @@
 ion-alert[class*="sc-ion-alert"] {
-  font-weight: $font-weight-light;
+  font-weight: $font-weight-normal;
 
   .alert-title {
-    font-weight: $font-weight-light;
+    font-weight: $font-weight-normal;
   }
 }
