fix(#2): missing firstname in alert msg

--- a/src/app/components/browse/pick-item-appointments/pick-item-appointments.html
+++ b/src/app/components/browse/pick-item-appointments/pick-item-appointments.html
@@ -2,4 +2,5 @@
                                    [unavailableAppointmentDates]="initScheduledDates?.unavailableAppointmentDates"
                                    [rejectedAppointmentDates]="initScheduledDates?.rejectedAppointmentDates"
                                    [prefillAppointmentsStartTimes]="initScheduledDates?.previousSelectedAppointmentsStartTimes"
+                                   [itemUser]="item?.user"
                                    (notifiySelected)="schedule($event)"></app-item-appointments-date-picker>
