--- a/src/app/components/browse/item-appointments-date-picker/item-appointments-date-picker.scss
+++ b/src/app/components/browse/item-appointments-date-picker/item-appointments-date-picker.scss
@@ -35,16 +35,14 @@ div.date-picker-scroller {
         width: 100%;
 
         app-display-date {
-          width: 50%;
+          width: 40%;
         }
 
         ion-button {
-          --width: 18rem;
           --height: initial;
-
-          &[fill="solid"] {
-            --border-width: 1px;
-          }
+          --border-width: 1px;
+          width: 60%;
+          --width: 94%;
         }
 
         .appointment-selected {
