feat(#2): display picked dates pink again

--- a/src/theme/date-picker.scss
+++ b/src/theme/date-picker.scss
@@ -9,6 +9,12 @@ div.date-picker-scroller {
                     font-weight: $font-weight-normal;
                 }
             }
+
+            &.has-appointment:not(.selected-date) {
+                p {
+                    color: $fluster-peach3;
+                }
+            }
         }
 
         div {
