feat(#2): increase icon size

--- a/src/app/components/advertise/pick-applicant-appointments/pick-applicant-appointments.scss
+++ b/src/app/components/advertise/pick-applicant-appointments/pick-applicant-appointments.scss
@@ -40,6 +40,7 @@ div.date-picker-scroller {
                     vertical-align: middle;
                     color: inherit;
                     margin-right: 8px;
+                    font-size: 3rem;
                 }
             }
         }
