--- a/src/app/components/advertise/pick-reschedule-appointments/pick-reschedule-appointments.scss
+++ b/src/app/components/advertise/pick-reschedule-appointments/pick-reschedule-appointments.scss
@@ -48,6 +48,7 @@ div#datePickerScrollX {
                     vertical-align: middle;
                     color: inherit;
                     margin-right: 8px;
+                    font-size: 3rem;
                 }
             }
         }
