--- a/src/app/components/advertise/pick-applicant-appointments/pick-applicant-appointments.scss
+++ b/src/app/components/advertise/pick-applicant-appointments/pick-applicant-appointments.scss
@@ -28,7 +28,7 @@ div.date-picker-scroller {
 
                 display: flex;
                 justify-content: center;
-                align-items: flex-end;
+                align-items: center;
                 width: 100%;
 
                 &.appointment-selected {
