--- a/src/app/components/advertise/pick-reschedule-appointments/pick-reschedule-appointments.scss
+++ b/src/app/components/advertise/pick-reschedule-appointments/pick-reschedule-appointments.scss
@@ -28,7 +28,7 @@ div#datePickerScrollX {
 
                 display: flex;
                 justify-content: center;
-                align-items: flex-end;
+                align-items: center;
                 width: 100%;
 
                 &.appointment-selected, &.appointment-selected.appointment-in-the-past {
