feat: cuter activated color

--- a/src/theme/navbar.scss
+++ b/src/theme/navbar.scss
@@ -11,6 +11,7 @@ ion-header ion-toolbar {
 
   ion-button {
     --color: white;
+    --ion-color-primary: white;
   }
 
   ion-back-button[class*="sc-ion-back-button"] {
