--- a/src/app/components/advertise/new-ad/new-ad-step-location/new-ad-step-location.html
+++ b/src/app/components/advertise/new-ad/new-ad-step-location/new-ad-step-location.html
@@ -13,12 +13,12 @@
         <ion-row>
             <ion-col size="12" class="flex-start" no-padding>
                 <ion-list *ngIf="newItem != null && newItem.address != null" text-center padding-top>
-                    <ion-item *ngIf="isAddressNotDefined()" tappable (click)="navigateToSearchLocation()" class="fluster-text-input-placeholder">
+                    <ion-item *ngIf="isAddressNotDefined()" button (click)="navigateToSearchLocation()" class="fluster-text-input-placeholder">
                         <ion-icon name="pin" slot="start"></ion-icon>
                         <ion-label>{{'NEW_AD.STEP_LOCATION.LOCATION_PLACEHOLDER' | translate}}</ion-label>
                     </ion-item>
 
-                    <ion-item *ngIf="!isAddressNotDefined()" tappable (click)="navigateToSearchLocation()">
+                    <ion-item *ngIf="!isAddressNotDefined()" button (click)="navigateToSearchLocation()">
                         <ion-icon name="pin" slot="start"></ion-icon>
                         <div text-wrap>
                             <ion-label>{{newItem.address.addressName}}</ion-label>
