--- a/src/app/components/advertise/pick-applicant-appointments/pick-applicant-appointments.html
+++ b/src/app/components/advertise/pick-applicant-appointments/pick-applicant-appointments.html
@@ -22,7 +22,7 @@
 
 <div #datePickerScrollY scrollY="true" id="datePickerScrollY">
     <ion-list no-padding (swipe)="swipeDatePicker($event)">
-        <ion-item *ngFor="let currentAppointment of currentAppointments;" tappable (click)="selectUnselectAppointment(currentAppointment)" text-center>
+        <ion-item *ngFor="let currentAppointment of currentAppointments;" button (click)="selectUnselectAppointment(currentAppointment)" text-center>
             <p [class.appointment-selected]="currentAppointment.selected">
                 <ion-icon slot="start" name="{{currentAppointment.selected ? 'checkmark-circle' : 'radio-button-off'}}"></ion-icon>
                 <app-display-date [calendarDisplay]="true" [displayDate]="currentAppointment.startTime"></app-display-date>
