--- a/src/theme/global-browse.scss
+++ b/src/theme/global-browse.scss
@@ -28,7 +28,7 @@ ion-content[role="browse"] {
 
     ion-item.in-list, ion-item-group ion-item {
         background-color: $fluster-light-grey;
-        border-color: $fluster-light-grey;
+        --background: $fluster-light-grey;
     }
 
     ion-searchbar input.searchbar-input {
