ux: cute text size

--- a/src/app/components/advertise/new-ad/new-ad-step-limitation/new-ad-step-limitation.scss
+++ b/src/app/components/advertise/new-ad/new-ad-step-limitation/new-ad-step-limitation.scss
@@ -14,7 +14,7 @@ ion-label {
 
 ion-range {
     div[slot="start"], div[slot="end"] {
-        font-size: $fluster-text-big;
+        font-size: $fluster-text-normal;
         font-weight: $font-weight-light;
     }
 
