--- a/src/app/pages/core/app-params/app-params.page.html
+++ b/src/app/pages/core/app-params/app-params.page.html
@@ -37,7 +37,7 @@
     </ion-card>
 
     <ion-card id="content" no-shadow>
-      <ion-item button (click)="openGithub()">
+      <ion-item button detail="false" (click)="openGithub()">
         <ion-label text-wrap text-center>Fluster is <strong>open source</strong>, released under the GNU Affero General Public License</ion-label>
       </ion-item>
 
