--- a/src/app/components/advertise/pick-ads-appointments/pick-ads-appointments.html
+++ b/src/app/components/advertise/pick-ads-appointments/pick-ads-appointments.html
@@ -18,7 +18,7 @@
 
 <div #datePickerScrollY scrollY="true" id="datePickerScrollY">
     <ion-list padding (swipe)="swipeDatePicker($event)">
-        <ion-item *ngFor="let currentAppointment of currentAppointments;" button (click)="selectUnselectAppointment(currentAppointment)" text-center>
+        <ion-item *ngFor="let currentAppointment of currentAppointments;" button detail="false" (click)="selectUnselectAppointment(currentAppointment)" text-center>
             <p [class.appointment-already-taken]="isAppointmentAlreadyTaken(currentAppointment)" [class.appointment-in-the-past]="!isInTheFuture(currentAppointment)" [class.appointment-selected]="currentAppointment.selected">
                 <ion-icon slot="start" name="{{iconToDisplay(currentAppointment)}}"></ion-icon>
                 <app-display-date [calendarDisplay]="true" [displayDate]="currentAppointment.startTime"></app-display-date>
