--- a/src/theme/global-ad.scss
+++ b/src/theme/global-ad.scss
@@ -24,7 +24,8 @@ ion-split-pane[class*="split-pane"].split-pane-visible ion-menu[menuid="menuAdve
 ion-content[role="ad"] {
     ion-item.in-list, ion-item-group ion-item {
         background-color: $fluster-midnight-blue;
-        --background: $fluster-midnight-blue;
+        --background: #{$fluster-midnight-blue};
+        --detail-push-color: #{$fluster-grey-blue};
 
         ion-icon {
             color: $fluster-peach3;
