--- a/src/theme/global-ad.scss
+++ b/src/theme/global-ad.scss
@@ -38,6 +38,7 @@ ion-content[role="ad"] {
 
         &.item-toggle {
             background-color: transparent;
+            --background: transparent;
             border-color: transparent;
         }
     }
