--- a/src/app/pages/core/app-params/app-params.page.html
+++ b/src/app/pages/core/app-params/app-params.page.html
@@ -76,7 +76,7 @@
 
     <ion-card no-shadow padding-top id="legal">
       <ion-item>
-        <a (click)="openTermsOfuser()">
+        <a (click)="openTermsOfuser()" no-margin>
           <ion-label text-wrap text-center>{{'APP_PARAMS.LEGAL' | translate}}</ion-label>
         </a>
       </ion-item>
