ux: fix weird black background on ios on activated button

--- a/src/theme/alert.scss
+++ b/src/theme/alert.scss
@@ -4,4 +4,8 @@ ion-alert[class*="sc-ion-alert"] {
   .alert-title {
     font-weight: $font-weight-normal;
   }
+
+  button.activated[class*="sc-ion-alert"] {
+    background-color: inherit;
+  }
 }
